assets/css/donate-book.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
html {
  height: 60rem ;
}
body {
  margin:0;
  padding:0;
  font-family: 'Poppins', sans-serif;
  background: rgb(86, 45, 211);
  
}

.login-box {
  position: absolute;
  top: 70%;
  left: 50%;
  width: 650px;
  padding: 40px;
  transform: translate(-50%, -50%);
  background: rgba(0, 0, 0, 0.871);
  box-sizing: border-box;
  box-shadow:10px 10px rgba(255, 183, 0, 0.845);
  border-radius: 20px;
  transition-duration: 0.5s;
  margin-bottom: 100px;
  
}

.login-box h2 {
  margin: 0 0 10px;
  padding: 0;
  color: rgb(255, 183, 0);
  text-align: center;
  font-weight: bolder;
  letter-spacing: 0.2rem;
  margin: 3rem 0rem 3rem 0rem;
}

.login-box .user-box {
  position: relative;
}

.login-box .user-box input {
  width: 100%;
  padding: 10px 0;
  font-size: 16px;
  color: #fff;
  margin-bottom: 20px;
  border: none;
  border-bottom: 1px solid #fff;
  outline: none;
  background: transparent;
}
.login-box .user-box label {
  position: absolute;
  top:0;
  left: 0;
  padding: 10px 0;
  font-size: 16px;
  color: #fff;
  pointer-events: none;
  transition: .5s;
}

.login-box .user-box input:focus ~ label,
.login-box .user-box input:valid ~ label {
  top: -20px;
  left: 0;
  color: rgb(255, 183, 0);
  font-size: 12px;
}

.login-box form a {
  position: relative;
  display: inline-block;
  padding: 10px 20px;
  color: rgb(255, 183, 0);
  font-size: 16px;
  text-decoration: none;
  text-transform: uppercase;
  overflow: hidden;
  transition: 1s;
  margin-top: 4.2rem;
  letter-spacing: 4px;
}

.login-box a:hover {
  background:rgb(75, 26, 222);
  color: #fff;
  border-radius: 5px;
  /* box-shadow: 0 0 5px #03e9f4,
              0 0 25px #03e9f4,
              0 0 50px #03e9f4,
              0 0 100px #03e9f4; */
}

.login-box a span {
  position: absolute;
  display: block;
}

.login-box a span:nth-child(1) {
  top: 0;
  left: -100%;
  width: 100%;
  height: 2px;
  background: linear-gradient(90deg, transparent, rgb(255, 183, 0));
  animation: btn-anim1 2s linear infinite;
} */

.login-box a span:nth-child(2) {
  top: -100%;
  right: 0;
  width: 2px;
  height: 100%;
  background: linear-gradient(180deg, transparent, rgb(255, 183, 0));
  animation: btn-anim2 1s linear infinite;
  animation-delay: 2.2s
}

.login-box:hover{
  transition-duration: 0.4s;
  box-shadow: 0px 0px 19px 11px rgb(255, 183, 0);
}

@keyframes btn-anim2 {
  0% {
    top: -100%;
  }
  50%,100% {
    top: 100%;
  }
}
@keyframes btn-anim1 {
  0% {
    left: -100%;
  }
  50%,100% {
    left: 100%;
  }
}


.login-box a span:nth-child(3) {
  bottom: 0;
  right: -100%;
  width: 100%;
  height: 2px;
  background: linear-gradient(270deg, transparent, rgb(255, 183, 0));
  animation: btn-anim3 1s linear infinite;
  animation-delay: 2.5s
}

@keyframes btn-anim3 {
  0% {
    right: -100%;
  }
  50%,100% {
    right: 100%;
  }
}

.login-box a span:nth-child(4) {
  bottom: -100%;
  left: 0;
  width: 2px;
  height: 100%;
  background: linear-gradient(360deg, transparent, rgb(255, 183, 0));
  animation: btn-anim4 1s linear infinite;
  animation-delay: 2.7s
}

@keyframes btn-anim4 {
  0% {
    bottom: -100%;
  }
  50%,100% {
    bottom: 100%;
  }
}

/* scroll bar design */
/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgb(77, 32, 32);
}
/* Handle */
::-webkit-scrollbar-thumb {
  background: #c68b59;
  border-radius: 10px;
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #c68b59;
  border: solid 2px rgb(41, 2, 10);
}
/* scroll bar end */

@media only screen and (max-width: 1100px) {
  .login-box {
    
    width: 700px;
  }
}
@media only screen and (max-width: 800px) {
  .login-box {
    top: 60%;
    width: 80%;
  }
}

input[type=checkbox], input[type=radio] {
  box-sizing: border-box;
  padding: 0;
  margin-top: 1rem;
}

